subscribe section ready

--- a/app/index.html
+++ b/app/index.html
@@ -924,6 +924,31 @@
          </div>
       </div>
     </div>
+  </section> 
+   
+  <section class="contact"> 
+    <div class="container">  
+      <div class="subscribe"> 
+         <h2 class="subscribe__title majority-title"> 
+           Subscribe For More Info
+           and update from Hounter
+         </h2>   
+          <img class="subscribe__decor-1" src="images/subscribe/decor/1.png" alt="decor"> 
+          <img class="subscribe__decor-2" src="images/subscribe/decor/2.png" alt="decor"> 
+          <img class="subscribe__decor-3" src="images/subscribe/decor/3.png" alt="decor"> 
+          <img class="subscribe__decor-4" src="images/subscribe/decor/4.png" alt="decor"> 
+          <img class="subscribe__decor-5" src="images/subscribe/decor/5.png" alt="decor"> 
+          <img class="subscribe__decor-6" src="images/subscribe/decor/6.png" alt="decor"> 
+          <img class="subscribe__decor-7" src="images/subscribe/decor/7.png" alt="decor"> 
+          <img class="subscribe__decor-8" src="images/subscribe/decor/8.png" alt="decor">
+
+         <form class="subscribe__form" action="#">  
+             <img class="subscribe__input-decor" src="images/subscribe/email.svg" alt="envelope">
+             <input class="subscribe__input" type="email" placeholder="Your email here">  
+             <button class="subscribe__btn" type="submit">Subsribe Now</button> 
+         </form>
+      </div>
+    </div>
   </section>
 
   <script src="js/main.min.js"></script>
