subscribe section form validation done

--- a/app/index.html
+++ b/app/index.html
@@ -942,7 +942,7 @@
           <img class="subscribe__decor-7" src="images/subscribe/decor/7.png" alt="decor"> 
           <img class="subscribe__decor-8" src="images/subscribe/decor/8.png" alt="decor">
 
-         <form class="subscribe__form" action="#">  
+         <form class="subscribe__form" id="subscribe__form" action="#">  
              <img class="subscribe__input-decor" src="images/subscribe/email.svg" alt="envelope">
              <input class="subscribe__input" type="email" placeholder="Your email here">  
              <button class="subscribe__btn" type="submit">Subsribe Now</button> 
