featured section responsive

--- a/app/index.html
+++ b/app/index.html
@@ -229,7 +229,7 @@
       </div>
   </header>
  
-  <!-- <section class="featured">
+  <section class="featured">
     <div class="container">
       <div class="featured-inner">
         <div class="featured-inner__top">
@@ -274,7 +274,7 @@
           </div>
 
         </div>
-
+        <div class="featured-inner__items-wrapper">
         <div class="featured-inner__items">
 
           <div class="featured-inner__villa">
@@ -478,11 +478,13 @@
           </div> 
 
         </div>
+      </div> 
 
       </div>
     </div>
   </section> 
-    
+     
+  <!--
   <section class="ready-to-sell"> 
     <div class="container">      
      <div class="ready-to-sell__blot-field"> 
