blog section responsive

--- a/app/index.html
+++ b/app/index.html
@@ -842,7 +842,7 @@
     </div>
   </section> 
     
-  <!--
+ 
   <section class="find-more"> 
     <div class="container"> 
       <div class="blog"> 
@@ -876,7 +876,7 @@
            <div class="blog__item">  
             <img class="blog__item-img"  src="images/blog/blog-2.jpg" alt="sofa" >  
 
-            <div class="blog__item-content">  
+            <div class="blog__item-content blog__item-content--home">  
               <div class="blog__person">
                 <h5 class="blog__person-title">Courtney Henry</h5>
                 <img class="blog__person-img" src="images/featured/person/henry.png" alt="person"> 
@@ -894,7 +894,7 @@
            <div class="blog__item blog__item--without-border">  
             <img class="blog__item-img"  src="images/blog/blog-3.jpg" alt="sofa" >  
 
-            <div class="blog__item-content">  
+            <div class="blog__item-content blog__item-content--palms">  
               <div class="blog__person">
                 <h5 class="blog__person-title">Darlene Robertson</h5>
                 <img class="blog__person-img" src="images/featured/person/darlene.png" alt="person"> 
@@ -923,7 +923,7 @@
               explain what we should know and check when we want to buy a house
             </p>  
               
-            <div class="blog__time-wrapper"> 
+            <div class="blog__time-wrapper blog__time-wrapper--right"> 
               <img class="blog__read-badge" src="images/blog/clock.svg" alt="clock"> 
               <p class="blog__read-time">8 min read | 25 Apr 2021</p> 
             </div> 
@@ -934,7 +934,7 @@
       </div>
     </div>
   </section> 
-   
+  <!--
   <section class="contact"> 
     <div class="container">  
       <div class="subscribe"> 
