subscribe section responsive

--- a/app/index.html
+++ b/app/index.html
@@ -934,7 +934,7 @@
       </div>
     </div>
   </section> 
-  <!--
+  
   <section class="contact"> 
     <div class="container">  
       <div class="subscribe"> 
@@ -954,12 +954,14 @@
          <form class="subscribe__form" id="subscribe__form" action="#">  
              <img class="subscribe__input-decor" src="images/subscribe/email.svg" alt="envelope">
              <input class="subscribe__input" type="email" placeholder="Your email here">  
-             <button class="subscribe__btn" type="submit">Subsribe Now</button> 
+             <button class="subscribe__btn" type="submit">  
+              <img class="subscribe__btn-decor" src="images/subscribe/email.svg" alt="envelope">
+              <p class="subscribe__btn-text">Subsribe Now </p>
          </form>
       </div>
     </div>
   </section> 
-   
+   <!--
   <footer class="footer">
     <div class="container">
       <div class="footer__inner">
