footer section responsive

--- a/app/index.html
+++ b/app/index.html
@@ -961,7 +961,7 @@
       </div>
     </div>
   </section> 
-   <!--
+  
   <footer class="footer">
     <div class="container">
       <div class="footer__inner">
@@ -1058,7 +1058,7 @@
   
       </div>
     </div>
-  </footer>  -->
+  </footer> 
 
  
   <script src="js/main.min.js"></script>
