made small corrections

--- a/app/index.html
+++ b/app/index.html
@@ -230,7 +230,7 @@
   </header>
  
   <section class="featured">
-    <div class="container">
+    <div class="container-no-trimming">
       <div class="featured-inner">
         <div class="featured-inner__top">
 
@@ -486,7 +486,7 @@
      
   
   <section class="ready-to-sell"> 
-    <div class="container">      
+    <div class="container-no-trimming">      
      <div class="ready-to-sell__blot-field"> 
       <img class="ready-to-sell__blot" src="images/ready-to-sell/right/blot.png" alt="decor">
       <div class="ready-to-sell__slider">   
